# RegicideOS

./: .gitignore  AGENTS.md  ARCHITECTURE_ANALYSIS.md  COMMIT_SQUASH_PLAN.md  Cargo.toml  Cargo.toml.header  DEVELOPMENT_ROADMAP.md  DOCUMENTATION_FIXES_APPLIED.md  HANDBOOK_ISSUES.md  Handbook.md  INSTALLATION_ARCHITECTURE.md  PLANS_OVERVIEW.md  README.md  STATUS.md  SYSINFO_FIXES_APPLIED.md  common.py  config.py  config.toml  docker-test.sh  drive.py  drives.sh  installer.py  justfile  legacy_installer.py  main.py  pyproject.toml  system.py  system.toml  test-regicide-in-docker.sh
.desloppify/: config.json  plan.json  plan.json.bak  query.json  review_packet_blind.json  state-python.json  state-python.json.bak  state-rust.json  state-rust.json.bak  state-typescript.json  state-typescript.json.bak
ai-agents/: README.md
ai-agents/btrmind/: AGENTS.md  Cargo.toml  MLE_Fragmentation_Development_Plan.md  README.md  demo_mle_fragmentation.sh  install.sh  output.txt  test_btrmind.sh
ai-agents/btrmind/.claude/: settings.local.json
ai-agents/btrmind/config/: btrmind.toml
ai-agents/btrmind/scripts/: requirements.txt  train_fragmentation_model.py
ai-agents/btrmind/src/: actions.rs  btrfs.rs  config.rs  fragmentation_model.rs  learning.rs  main.rs
ai-agents/btrmind/systemd/: btrmind.service
ai-agents/candle-server/: Cargo.toml  README.md
ai-agents/candle-server/src/: main.rs
ai-agents/portcl/: Cargo.toml  README.md  TEST_SUITE_COMPLETION_REPORT.md  WIP.md  test-coverage-report.md  test-dependency-report.md  test_suite_runner  test_suite_runner.rs  test_syntax  test_syntax.rs  verify_benchmarks_contract
ai-agents/portcl/.cargo/: config.toml
ai-agents/portcl/config/: default.toml
ai-agents/portcl/init.d/: portcl-agent  portcl-monitor
ai-agents/portcl/src/: error.rs  lib.rs  main.rs
ai-agents/portcl/src/actions/: executor.rs  mod.rs  portage_actions.rs  safety.rs
ai-agents/portcl/src/config/: mod.rs  settings.rs  validation.rs
ai-agents/portcl/src/monitor/: events.rs  metrics.rs  mod.rs  portage.rs
ai-agents/portcl/src/rl_engine/: agent.rs  continual.rs  experience.rs  mod.rs  model.rs
ai-agents/portcl/src/service/: mod.rs  openrc.rs  systemd.rs
ai-agents/portcl/src/service/common/: mod.rs
ai-agents/portcl/src/utils/: error.rs  logging.rs  logging_tests.rs  mod.rs  serde_utils.rs
ai-agents/portcl/systemd/: portcl-agent.service  portcl-monitor.service
ai-agents/portcl/tests/: README.md  STRUCTURE_SUMMARY.md  basic_tests.rs  mod.rs
ai-agents/portcl/tests/config/: README.md  loader.rs  mod.rs  test_runner.toml  validator.rs
ai-agents/portcl/tests/config/environments/: development.toml  production.toml  staging.toml
ai-agents/portcl/tests/config/templates/: ci_cd.toml  comprehensive_test.toml  load_test.toml  quick_test.toml  regression_test.toml
ai-agents/portcl/tests/config/test_types/: integration.toml  performance.toml  property.toml  unit.toml
ai-agents/portcl/tests/contract/: COVERAGE_TEST_SUMMARY.md  mod.rs  test_benchmarks.rs  test_coverage.rs  test_coverage_simple.rs  test_coverage_simple_runner  test_execute_tests.rs  test_get_test.rs  test_list_tests.rs  test_tdd_failure_demo  test_tdd_failure_demo.rs
ai-agents/portcl/tests/fixtures/: data_generator.rs  mock_agent.rs  mock_data.rs  mock_executor.rs  mock_monitor.rs  mod.rs  test_helpers.rs  test_models.rs
ai-agents/portcl/tests/fixtures/test_helpers/: benchmark_helpers.rs  data_validator.rs  mock_environment.rs  test_assertions.rs  test_runner.rs
ai-agents/portcl/tests/integration/: README_async_workflows.md  mod.rs  test_async_workflows.rs  test_error_scenarios.rs  test_serialization_workflows.rs
ai-agents/portcl/tests/performance/: mod.rs  test_concurrent_load.rs  test_memory_usage.rs  test_response_time.rs
ai-agents/portcl/tests/property/: mod.rs
ai-agents/portcl/tests/unit/: error_tests.rs  mod.rs  serde_tests.rs  test_actions.rs  test_config.rs  test_error.rs  test_monitor.rs  test_rl_engine.rs  test_safety.rs  utils_tests.rs
binaries/: regicide-installer
build-system/: .gitlab-ci.yml  README.md  __main__.py  dagger.json  dagger.py  dagger_pipeline.py  mcp-server.py  pyproject.toml  regicide-image-builder.py  regicide_image_builder.py  requirements.txt
build-system/catalyst/: AGENTS.md  build-manual.sh  build-qemu-image-arm64.sh  build-qemu-image.sh  build-vm-image.sh  build.sh  run-qemu.sh  seed-overlays.sh  stage4-systemd-cosmic.sh  stage4-systemd-cosmic.spec  vm-builder.sh
build-system/catalyst/cosmic-overlay/cosmic-utils/minimon/: minimon-9999.ebuild
build-system/catalyst/cosmic-overlay/etc/portage/package.accept_keywords/: cosmic
build-system/catalyst/overlay/etc/portage/repos.conf/: regicide.conf
build-system/catalyst/scripts/: verify-sigstore.sh
build-system/catalyst/stages/: common.sh  stage1-setup.sh  stage2-sync.sh  stage3-base-a.sh  stage3-base-b.sh  stage3-base-c.sh  stage3-base-d.sh  stage3-base-e.sh  stage3-base-f.sh  stage3-base.sh  stage4-cosmic-a.sh  stage4-cosmic-b.sh  stage4-cosmic.sh  stage5-regicide.sh  stage6-finalize.sh  stage7-sbom.sh  stage7-verify.sh  stage8-vm-test.sh
build-system/skills/regicide-build/: SKILL.md
build-system/tests/: __init__.py  test_dagger.py  test_regicide_image_builder.py
ci/: README.md  go.mod  main.go
config/: iso-config.toml
data/: regicide-rollback-apply.service
docs/: cosmic-setup.md
installer/: .gitattributes  AGENTS.md  Cargo.toml  complete_fixes_summary.sh  critical_fixes_summary.sh  improvements_summary.sh  initramfs_overlay_fixes_summary.sh  luks_boot_summary.sh  partition_fixes_summary.sh  test_boot_overlay_fix.rs  test_flatpak.sh  test_partition_fix.sh
installer/coverage-reports/: cobertura.xml
installer/html-coverage/: tarpaulin-report.html
installer/json-coverage/: tarpaulin-report.json
installer/src/: filesystem.rs  lib.rs  logging.rs  main.rs  test_boot_overlay.rs  validation.rs
memory/: constitution.md  constitution_update_checklist.md
scripts/: build-iso.sh  install-dependencies.sh  rebuild-modules.sh  update-agent-context.sh  validate-iso.sh
specs/: btrmind.md  (+1 more)
(+164 files in other folders)
