[package]
name = "installer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "installer"
path = "src/main.rs"

[lib]
name = "installer"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
colored = "2.0"
regex = "1.5"
ctrlc = "3.4"
