[package]
name = "candle-server"
version = "0.1.0"
edition = "2021"
description = "Candle-powered ML inference server for RegicideOS AI layer"
license = "GPL-3.0"
authors = ["RegicideOS Team"]

[[bin]]
name = "candle-server"
path = "src/main.rs"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git" }
candle-nn = { git = "https://github.com/huggingface/candle.git" }  
candle-transformers = { git = "https://github.com/huggingface/candle.git" }
safetensors = "0.4"
tokenizers = "0.19"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
toml = "0.8"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
hf-hub = "0.3"
reqwest = { version = "0.11", features = ["json", "stream"] }

[features]
cuda = []
