[package]
name = "portcl"
version = "0.1.0"
edition = "2021"
description = "Portage Continual Learning Agent for RegicideOS"
authors = ["RegicideOS Team"]
license = "MIT"
repository = "https://github.com/awdemos/RegicideOS"
readme = "README.md"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI argument parsing
clap = { version = "4.0", features = ["derive"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# HTTP client for API calls
reqwest = { version = "0.11", features = ["json"] }

# Async traits
async-trait = "0.1"
futures = "0.3"

# Concurrency utilities
parking_lot = "0.12"
crossbeam = "0.8"
dashmap = "5.5"

# Machine Learning / RL
tch = { version = "0.14", optional = true }
rand = "0.8"
ndarray = { version = "0.15", features = ["serde"] }

# System integration
nix = "0.27"
sysinfo = "0.30"
num_cpus = "1.0"

# Configuration
config = "0.13"

[[bin]]
name = "portcl-service-installer"
path = "src/bin/portcl-service-installer.rs"

[dev-dependencies]
# Mocking for tests
mockall = "0.11"
tokio-test = "0.4"

# Benchmarking
criterion = "0.5"

# Test utilities
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
pretty_assertions = "1.4"
test-log = "0.2"
env_logger = "0.10"
serial_test = "2.0"
proptest = "1.4"

[features]
default = []
test-utils = []
ml = ["tch"]
